--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<muleVersion>4.6.1</muleVersion>
-						<username>magician</username>
-						<password>Magician@fire123</password>
+						<username>${PLATFORM_USERNAME}</username>
+						<password>${PLATFORM_PASSWORD}</password>
 						<applicationName>achieveing_ci-cd</applicationName>
 						<environment>Sandbox</environment>
 						<region>us-east-2</region>
