--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 						<muleVersion>4.4.0</muleVersion>
 						<username>magician123</username>
 						<password>Magician@fire123</password>
-						<applicationName>achieving-CICD</applicationName>
+						<applicationName>achieving-CICD1</applicationName>
 						<environment>Sandbox</environment>
 						<region>us-east-2</region>
 						<workers>1</workers>
